more erfan details

--- a/about.Rmd
+++ b/about.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 
-Erfan was born and raised in Iran. He immigrated to the United States after finishing high school, where he continued his higher education. 
+Erfan was born and raised in Iran. He immigrated to the United States after finishing high school, where he continued his higher education. He has enjoyed living in California, Michigan, and New York, where he now calls home. 
 
 \
 
