--- a/about.Rmd
+++ b/about.Rmd
@@ -7,10 +7,11 @@ output:
 ---
 
 
-Erfan was born and raised in Iran. He immigrated to the United States after finishing high school, where he continued his higher education. He has enjoyed living in California, Michigan, and New York, where he now calls home. 
+In the following paragraphs, you can find some information about Erfan's credentials.
 
 \
 
+## Publications
 Erfan's academic publications can be found here:
 [Publications](https://www.ncbi.nlm.nih.gov/myncbi/erfan.faridmoayer.2/bibliography/public/)
 
